alpha production push

--- a/src/gallery/views/gallery.html
+++ b/src/gallery/views/gallery.html
@@ -4,17 +4,81 @@
         width: 100px;
     }
 
+    .clearfix .landscape{
+        height: 150px;
+        /*width: 200px;*/
+    }
+    .clearfix .portrait{
+        height: 350px;
+        /*width: 200px;*/
+    }
+
+
 </style>
 <br>
-<div class="container text-center">
-    <h3>Gallery</h3>
-    <ul class="wow slideInUp docs-pictures clearfix">
-        <li><img data-original="images/gallery/1.jpg" src="images/gallery/1.jpg" alt="afsafsa"></li>
-        <li><img data-original="images/gallery/2.jpg" src="images/gallery/2.jpg" alt="afsafsa"></li>
-        <li><img data-original="images/gallery/3.jpg" src="images/gallery/3.jpg" alt="afsafsa"></li>
-        <li><img data-original="images/gallery/4.jpg" src="images/gallery/4.jpg" alt="afsafsa"></li>
-        <li><img data-original="images/gallery/5.jpg" src="images/gallery/5.jpg" alt="afsafsa"></li>
-        <li><img data-original="images/gallery/6.jpg" src="images/gallery/6.jpg" alt="afsafsa"></li>
-        <!--<li ng-repeat="images in galleryImages"><img  data-original='images/gallery/1.jpg' ng-src={{images.imgsrc}} alt={{images.heading}}></li>-->
-    </ul>
+<div class="row text-center">
+    <div class="container">
+        <h3>Gallery</h3>
+        <ul class="wow slideInUp docs-pictures clearfix">
+            <!--<li><img data-original="images/gallery/1.jpg" src="images/gallery/1.jpg" alt="afsafsa"></li>-->
+            <!--<li><img data-original="images/gallery/2.jpg" src="images/gallery/2.jpg" alt="afsafsa"></li>-->
+            <!--<li><img data-original="images/gallery/3.jpg" src="images/gallery/3.jpg" alt="afsafsa"></li>-->
+            <!--<li><img data-original="images/gallery/4.jpg" src="images/gallery/4.jpg" alt="afsafsa"></li>-->
+            <!--<li><img data-original="images/gallery/5.jpg" src="images/gallery/5.jpg" alt="afsafsa"></li>-->
+            <li class="landscape waves-effect waves-light"><img data-original="http://imgur.com/XTIrqvH.jpg" src="http://imgur.com/XTIrqvH.jpg" alt="afsafsa"></li>
+            <li class="landscape waves-effect waves-light"><img data-original="http://imgur.com/hfRDcYF.jpg" src="http://imgur.com/hfRDcYF.jpg" alt="afsafsa"></li>
+            <li class="landscape waves-effect waves-light"><img data-original="http://imgur.com/kzkt99d.jpg" src="http://imgur.com/kzkt99d.jpg" alt="afsafsa"></li>
+            <li class="landscape waves-effect waves-light"><img data-original="http://imgur.com/ZdggJAv.jpg" src="http://imgur.com/ZdggJAv.jpg" alt="afsafsa"></li>
+            <li class="landscape waves-effect waves-light"><img data-original="http://imgur.com/qWYM3zC.jpg" src="http://imgur.com/qWYM3zC.jpg" alt="afsafsa"></li>
+            <li class="landscape waves-effect waves-light"><img data-original="http://imgur.com/fxpu0WC.jpg" src="http://imgur.com/fxpu0WC.jpg" alt="afsafsa"></li>
+            <li class="landscape waves-effect waves-light"><img data-original="http://i.imgur.com/5qssr38.jpg" src="http://i.imgur.com/5qssr38.jpg" alt="afsafsa"></li>
+            <li class="landscape waves-effect waves-light"><img data-original="http://i.imgur.com/L1eIZwV.jpg" src="http://i.imgur.com/L1eIZwV.jpg" alt="afsafsa"></li>
+            <!--<li ng-repeat="images in galleryImages><img  data-original='images/gallery/1.jpg' ng-src={{images.imgsrc}} alt={{images.heading}}></li>-->
+
+            <li class="portrait waves-effect waves-light"><img data-original="http://imgur.com/5fFeL8y.jpg" src="http://imgur.com/5fFeL8y.jpg" alt="afsafsa"></li>
+            <li class="portrait waves-effect waves-light"><img data-original="http://imgur.com/yELYX6m.jpg" src="http://imgur.com/yELYX6m.jpg" alt="afsafsa"></li>
+            <li class="portrait waves-effect waves-light"><img data-original="http://imgur.com/IiUrJkZ.jpg" src="http://imgur.com/IiUrJkZ.jpg" alt="afsafsa"></li>
+
+
+        </ul>
+    </div>
+</div>
+<br><br>
+
+<div class="row text-center" style="background-color: whitesmoke">
+    <br>
+    <h5>Download HD Wallpapers</h5>
+    <br>
+
+        <div class="text-center col-xs-12 col-sm-6 col-md-3 col-lg-3 wow fadeInUp">
+            <div class="  waves-effect waves-orange" >
+                <img class="thumbnail" src="http://i.imgur.com/KOLP23zs.jpg" alt="">
+            </div>
+            <br>
+            <a class="btn btn-success waves-effect waves-light" ng-click="download('http://i.imgur.com/KOLP23z.jpg')">Download</a>
+        </div>
+ <div class="text-center col-xs-12 col-sm-6 col-md-3 col-lg-3 wow fadeInUp">
+            <div class="  waves-effect waves-orange" >
+                <img class="thumbnail" src="http://i.imgur.com/fjjkhOks.jpg" alt="">
+            </div>
+            <br>
+            <a class="btn btn-success waves-effect waves-light" ng-click="download('http://i.imgur.com/fjjkhOk.jpg')">Download</a>
+        </div>
+ <div class="text-center col-xs-12 col-sm-6 col-md-3 col-lg-3 wow fadeInUp">
+            <div class="  waves-effect waves-orange" >
+                <img class="thumbnail" src="http://i.imgur.com/YSIjuMps.jpg" alt="">
+            </div>
+            <br>
+            <a class="btn btn-success waves-effect waves-light" ng-click="download('http://i.imgur.com/YSIjuMp.jpg')">Download</a>
+        </div>
+ <div class="text-center col-xs-12 col-sm-6 col-md-3 col-lg-3 wow fadeInUp">
+            <div class="  waves-effect waves-orange" >
+                <img class="thumbnail" src="http://i.imgur.com/nRyHRd3s.jpg" alt="">
+            </div>
+            <br>
+            <a class="btn btn-success waves-effect waves-light" ng-click="download('http://i.imgur.com/nRyHRd3.jpg')">Download</a>
+        </div>
+    <br><br><br><br>
+
+
 </div>
