--- a/src/contact/views/contact.html
+++ b/src/contact/views/contact.html
@@ -57,8 +57,17 @@
                     <a href="tel:9447894916" style="font-size: medium;">9447894916</a>
                     <br>
                     <a href="tel:04742766667" style="font-size: medium;">0474 2766667</a>
+                    <br><br>
+                    <i class="maketextgold material-icons">mail</i>
+                    <p>Email</p>
+                    <a style="color:dodgerblue" href="mailto:office@sreerajarajeswaridevi.org">office@sreerajarajeswaridevi.org</a>
+                    <br><br>
+                    <i class="maketextgold material-icons">access_time</i>
+                    <p style="color:darkgoldenrod">Timings</p>
+                    <p>Morning hours: 5:30 am to 9:30 am</p>
+                    <p>Evening hours: 5:30 pm to 8:00 pm</p>
                     <hr>
-                    <span style="font-size: small">Governing body :<br>Kollam Kadappakkada Vadakkekunnathu <br>Sree Rajarajeswari Devi Temple Trust</span>
+                    <!--<span style="font-size: small">Governing body :<br>Kollam Kadappakkada Vadakkekunnathu <br>Sree Rajarajeswari Devi Temple Trust</span>-->
                 </address>
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12">
@@ -91,3 +100,22 @@
         <br>
     </div>
 </div>
+
+<div class="container text-center" style="padding: 3%;">
+    <p><small>The Temple is governed by </small> <b>Kollam Kadappakkada Vadakkekunnathu Sree Rajarajeswari Devi Temple Trust </b></p>
+    <p>with utmost piety, devotion  and sincerity. Almost all the poojas are carried out under the guidance of</p>
+    <p>the temple Acharya, Chief Priest, Head Priest, Sub Priest and the Vedaadhyayi (Vedic Teacher) </p>
+    <p>strictly adhering to temple tradition for the solace of every devotee concerned</p>
+</div>
+
+<!--The Temple is governed by Kollam Kadappakkada Vadakkekunnathu-->
+
+
+<!--with utmost piety, devotion  and-->
+<!--sincerity. Almost all the poojas are carried out under the guidance of the temple-->
+
+<!--Acharya, Chief Priest, Head Priest, Sub Priest and the Vedaadhyayi (Vedic-->
+
+<!--Teacher) strictly adhering to temple tradition for the solace of every devotee-->
+
+<!--concerned!-->
