--- a/src/gallery/views/gallery.html
+++ b/src/gallery/views/gallery.html
@@ -8,76 +8,89 @@
         height: 150px;
         /*width: 200px;*/
     }
-    .clearfix .portrait{
-        height: 350px;
+    .clearfix img{
+        height: 50px;
+        width: 50px;
         /*width: 200px;*/
     }
-
+    .docs-pictures li{
+        width: auto;
+    }
+    .docs-pictures li img{
+        height: auto !important;
+        width: auto !important;
+        margin: 10px;
+    }
 
 </style>
 <br>
-<div class="row text-center">
+<div class="container text-center">
     <div class="container">
         <h3>Gallery</h3>
         <ul class="wow slideInUp docs-pictures clearfix">
-            <!--<li><img data-original="images/gallery/1.jpg" src="images/gallery/1.jpg" alt="afsafsa"></li>-->
-            <!--<li><img data-original="images/gallery/2.jpg" src="images/gallery/2.jpg" alt="afsafsa"></li>-->
-            <!--<li><img data-original="images/gallery/3.jpg" src="images/gallery/3.jpg" alt="afsafsa"></li>-->
-            <!--<li><img data-original="images/gallery/4.jpg" src="images/gallery/4.jpg" alt="afsafsa"></li>-->
-            <!--<li><img data-original="images/gallery/5.jpg" src="images/gallery/5.jpg" alt="afsafsa"></li>-->
-            <li class="landscape waves-effect waves-light"><img data-original="http://imgur.com/XTIrqvH.jpg" src="http://imgur.com/XTIrqvH.jpg" alt="afsafsa"></li>
-            <li class="landscape waves-effect waves-light"><img data-original="http://imgur.com/hfRDcYF.jpg" src="http://imgur.com/hfRDcYF.jpg" alt="afsafsa"></li>
-            <li class="landscape waves-effect waves-light"><img data-original="http://imgur.com/kzkt99d.jpg" src="http://imgur.com/kzkt99d.jpg" alt="afsafsa"></li>
-            <li class="landscape waves-effect waves-light"><img data-original="http://imgur.com/ZdggJAv.jpg" src="http://imgur.com/ZdggJAv.jpg" alt="afsafsa"></li>
-            <li class="landscape waves-effect waves-light"><img data-original="http://imgur.com/qWYM3zC.jpg" src="http://imgur.com/qWYM3zC.jpg" alt="afsafsa"></li>
-            <li class="landscape waves-effect waves-light"><img data-original="http://imgur.com/fxpu0WC.jpg" src="http://imgur.com/fxpu0WC.jpg" alt="afsafsa"></li>
-            <li class="landscape waves-effect waves-light"><img data-original="http://i.imgur.com/5qssr38.jpg" src="http://i.imgur.com/5qssr38.jpg" alt="afsafsa"></li>
-            <li class="landscape waves-effect waves-light"><img data-original="http://i.imgur.com/L1eIZwV.jpg" src="http://i.imgur.com/L1eIZwV.jpg" alt="afsafsa"></li>
-            <!--<li ng-repeat="images in galleryImages><img  data-original='images/gallery/1.jpg' ng-src={{images.imgsrc}} alt={{images.heading}}></li>-->
 
-            <li class="portrait waves-effect waves-light"><img data-original="http://imgur.com/5fFeL8y.jpg" src="http://imgur.com/5fFeL8y.jpg" alt="afsafsa"></li>
-            <li class="portrait waves-effect waves-light"><img data-original="http://imgur.com/yELYX6m.jpg" src="http://imgur.com/yELYX6m.jpg" alt="afsafsa"></li>
-            <li class="portrait waves-effect waves-light"><img data-original="http://imgur.com/IiUrJkZ.jpg" src="http://imgur.com/IiUrJkZ.jpg" alt="afsafsa"></li>
+            <li class=" waves-effect waves-light"><img data-original="http://i.imgur.com/XTIrqvH.jpg"   src="http://i.imgur.com/XTIrqvHs.jpg" alt=""></li>
+            <li class=" waves-effect waves-light"><img data-original="http://imgur.com/hfRDcYF.jpg"     src="http://i.imgur.com/hfRDcYFs.jpg" alt=""></li>
+            <li class=" waves-effect waves-light"><img data-original="http://imgur.com/kzkt99d.jpg"     src="http://i.imgur.com/kzkt99ds.jpg" alt=""></li>
+            <li class=" waves-effect waves-light"><img data-original="http://imgur.com/ZdggJAv.jpg"     src="http://i.imgur.com/ZdggJAvs.jpg" alt=""></li>
+            <li class=" waves-effect waves-light"><img data-original="http://imgur.com/qWYM3zC.jpg"     src="http://i.imgur.com/qWYM3zCs.jpg" alt=""></li>
+            <li class=" waves-effect waves-light"><img data-original="http://imgur.com/fxpu0WC.jpg"     src="http://i.imgur.com/fxpu0WCs.jpg" alt=""></li>
+            <li class=" waves-effect waves-light"><img data-original="http://i.imgur.com/5qssr38.jpg"   src="http://i.imgur.com/5qssr38s.jpg" alt=""></li>
+            <li class=" waves-effect waves-light"><img data-original="http://i.imgur.com/L1eIZwV.jpg"   src="http://i.imgur.com/L1eIZwVs.jpg" alt=""></li>
+            <li class= "waves-effect waves-light"><img data-original="http://imgur.com/5fFeL8y.jpg"     src="http://i.imgur.com/5fFeL8ys.jpg" alt=""></li>
+            <li class= "waves-effect waves-light"><img data-original="http://imgur.com/yELYX6m.jpg"     src="http://i.imgur.com/yELYX6ms.jpg" alt=""></li>
+            <li class= "waves-effect waves-light"><img data-original="http://imgur.com/IiUrJkZ.jpg"     src="http://i.imgur.com/IiUrJkZs.jpg" alt=""></li>
 
+
+
+            <li class= "waves-effect waves-light"><img data-original="http://i.imgur.com/merIl7Ph.jpg" src="http://i.imgur.com/merIl7Ps.jpg" alt=""></li>
+            <li class= "waves-effect waves-light"><img data-original="http://i.imgur.com/5eXbjM8h.jpg" src="http://i.imgur.com/5eXbjM8s.jpg" alt=""></li>
+            <li class= "waves-effect waves-light"><img data-original="http://i.imgur.com/yWL8Dkyh.jpg" src="http://i.imgur.com/yWL8Dkys.jpg" alt=""></li>
+            <li class= "waves-effect waves-light"><img data-original="http://i.imgur.com/TGRZGPHh.jpg" src="http://i.imgur.com/TGRZGPHs.jpg" alt=""></li>
+            <li class= "waves-effect waves-light"><img data-original="http://i.imgur.com/tjLI6sZh.jpg" src="http://i.imgur.com/tjLI6sZs.jpg" alt=""></li>
+            <li class= "waves-effect waves-light"><img data-original="http://i.imgur.com/kdDIppkh.jpg" src="http://i.imgur.com/kdDIppks.jpg" alt=""></li>
+            <li class= "waves-effect waves-light"><img data-original="http://i.imgur.com/XuTHt19h.jpg" src="http://i.imgur.com/XuTHt19s.jpg" alt=""></li>
+            <li class= "waves-effect waves-light"><img data-original="http://i.imgur.com/4jiJAmih.jpg" src="http://i.imgur.com/4jiJAmis.jpg" alt=""></li>
+            <li class= "waves-effect waves-light"><img data-original="http://i.imgur.com/L1eIZwVh.jpg" src="http://i.imgur.com/L1eIZwVs.jpg" alt=""></li>
 
         </ul>
     </div>
 </div>
 <br><br>
 
-<div class="row text-center" style="background-color: whitesmoke">
+<div class="container-fluid text-center" style="background-color: whitesmoke">
     <br>
     <h5>Download HD Wallpapers</h5>
     <br>
 
-        <div class="text-center col-xs-12 col-sm-6 col-md-3 col-lg-3 wow fadeInUp">
-            <div class="  waves-effect waves-orange" >
-                <img class="thumbnail" src="http://i.imgur.com/KOLP23zs.jpg" alt="">
-            </div>
-            <br>
-            <a class="btn btn-success waves-effect waves-light" ng-click="download('http://i.imgur.com/KOLP23z.jpg')">Download</a>
+    <div class="text-center col-xs-12 col-sm-6 col-md-3 col-lg-3 wow fadeInUp">
+        <div class="  waves-effect waves-orange" >
+            <img class="thumbnail" src="http://i.imgur.com/KOLP23zs.jpg" alt="">
         </div>
- <div class="text-center col-xs-12 col-sm-6 col-md-3 col-lg-3 wow fadeInUp">
-            <div class="  waves-effect waves-orange" >
-                <img class="thumbnail" src="http://i.imgur.com/fjjkhOks.jpg" alt="">
-            </div>
-            <br>
-            <a class="btn btn-success waves-effect waves-light" ng-click="download('http://i.imgur.com/fjjkhOk.jpg')">Download</a>
+        <br>
+        <a class="btn btn-success waves-effect waves-light" ng-click="download('http://i.imgur.com/KOLP23z.jpg')">Download</a>
+    </div>
+    <div class="text-center col-xs-12 col-sm-6 col-md-3 col-lg-3 wow fadeInUp">
+        <div class="  waves-effect waves-orange" >
+            <img class="thumbnail" src="http://i.imgur.com/fjjkhOks.jpg" alt="">
         </div>
- <div class="text-center col-xs-12 col-sm-6 col-md-3 col-lg-3 wow fadeInUp">
-            <div class="  waves-effect waves-orange" >
-                <img class="thumbnail" src="http://i.imgur.com/YSIjuMps.jpg" alt="">
-            </div>
-            <br>
-            <a class="btn btn-success waves-effect waves-light" ng-click="download('http://i.imgur.com/YSIjuMp.jpg')">Download</a>
+        <br>
+        <a class="btn btn-success waves-effect waves-light" ng-click="download('http://i.imgur.com/fjjkhOk.jpg')">Download</a>
+    </div>
+    <div class="text-center col-xs-12 col-sm-6 col-md-3 col-lg-3 wow fadeInUp">
+        <div class="  waves-effect waves-orange" >
+            <img class="thumbnail" src="http://i.imgur.com/YSIjuMps.jpg" alt="">
         </div>
- <div class="text-center col-xs-12 col-sm-6 col-md-3 col-lg-3 wow fadeInUp">
-            <div class="  waves-effect waves-orange" >
-                <img class="thumbnail" src="http://i.imgur.com/nRyHRd3s.jpg" alt="">
-            </div>
-            <br>
-            <a class="btn btn-success waves-effect waves-light" ng-click="download('http://i.imgur.com/nRyHRd3.jpg')">Download</a>
+        <br>
+        <a class="btn btn-success waves-effect waves-light" ng-click="download('http://i.imgur.com/YSIjuMp.jpg')">Download</a>
+    </div>
+    <div class="text-center col-xs-12 col-sm-6 col-md-3 col-lg-3 wow fadeInUp">
+        <div class="  waves-effect waves-orange" >
+            <img class="thumbnail" src="http://i.imgur.com/nRyHRd3s.jpg" alt="">
         </div>
+        <br>
+        <a class="btn btn-success waves-effect waves-light" ng-click="download('http://i.imgur.com/nRyHRd3.jpg')">Download</a>
+    </div>
     <br><br><br><br>
 
 
