minor bug fixes

--- a/src/contact/views/contact.html
+++ b/src/contact/views/contact.html
@@ -84,15 +84,15 @@
             <hr>
             <div class="col-md-1 col-lg-1"></div>
             <div ng-repeat="contact in contacts" class="text-center col-xs-12 col-sm-6 col-md-2 col-lg-2 wow fadeInUp">
-                <div class=" img-circle waves-effect waves-orange" style="border:1px solid goldenrod">
-                    <img ng-src="{{contact.imgSrc}}" class="img-circle" alt="" height="100px" width="100px">
-                </div>
+                    <div class=" img-circle waves-effect waves-orange" style="border:1px solid goldenrod">
+                        <img ng-src="{{contact.imgSrc}}" class="img-circle" alt="" height="100px" width="100px">
+                    </div>
                 <br><br>
-                <p class="rr-name">{{contact.name}}</p>
-                <p class="rr-desc">{{contact.desc}}</p>
-                <p class="rr-subdesc">{{contact.subDesc}}</p>
-                <i class="maketextgold material-icons">phone</i><br>
-                <a class="rr-phone" href="tel:{{contact.ph}}">{{contact.ph}}</a>
+                    <p class="rr-name">{{contact.name}}</p>
+                    <p class="rr-desc">{{contact.desc}}</p>
+                    <p class="rr-subdesc">{{contact.subDesc}}</p>
+                    <i class="maketextgold material-icons">phone</i><br>
+                    <a class="rr-phone" href="tel:{{contact.ph}}">{{contact.ph}}</a>
                 <br>
                 <hr id="c-ruler">
             </div>
@@ -108,3 +108,14 @@
     <p>strictly adhering to temple tradition for the solace of every devotee concerned</p>
 </div>
 
+<!--The Temple is governed by Kollam Kadappakkada Vadakkekunnathu-->
+
+
+<!--with utmost piety, devotion  and-->
+<!--sincerity. Almost all the poojas are carried out under the guidance of the temple-->
+
+<!--Acharya, Chief Priest, Head Priest, Sub Priest and the Vedaadhyayi (Vedic-->
+
+<!--Teacher) strictly adhering to temple tradition for the solace of every devotee-->
+
+<!--concerned!-->
