--- a/src/gallery/views/gallery.html
+++ b/src/gallery/views/gallery.html
@@ -29,6 +29,9 @@
         <h3>Gallery</h3>
         <ul class="wow slideInUp docs-pictures clearfix">
 
+            <li class= "waves-effect waves-light"><img data-original="http://i.imgur.com/NBdC18eh.jpg" src="http://i.imgur.com/NBdC18es.jpg" alt="Website Inauguration"></li>
+             <li class= "waves-effect waves-light"><img data-original="http://i.imgur.com/myFkssPh.jpg" src="http://i.imgur.com/myFkssPs.jpg" alt="Kappu kettu - For Sree Maha gayathri yagam"></li>
+             <li class= "waves-effect waves-light"><img data-original="http://i.imgur.com/5eXbjM8h.jpg" src="http://i.imgur.com/5eXbjM8s.jpg" alt=""></li>
             <li class=" waves-effect waves-light"><img data-original="http://i.imgur.com/XTIrqvH.jpg"   src="http://i.imgur.com/XTIrqvHs.jpg" alt=""></li>
             <li class=" waves-effect waves-light"><img data-original="http://imgur.com/hfRDcYF.jpg"     src="http://i.imgur.com/hfRDcYFs.jpg" alt=""></li>
             <li class=" waves-effect waves-light"><img data-original="http://imgur.com/kzkt99d.jpg"     src="http://i.imgur.com/kzkt99ds.jpg" alt=""></li>
@@ -44,7 +47,6 @@
 
 
             <li class= "waves-effect waves-light"><img data-original="http://i.imgur.com/merIl7Ph.jpg" src="http://i.imgur.com/merIl7Ps.jpg" alt=""></li>
-            <li class= "waves-effect waves-light"><img data-original="http://i.imgur.com/5eXbjM8h.jpg" src="http://i.imgur.com/5eXbjM8s.jpg" alt=""></li>
             <li class= "waves-effect waves-light"><img data-original="http://i.imgur.com/yWL8Dkyh.jpg" src="http://i.imgur.com/yWL8Dkys.jpg" alt=""></li>
             <li class= "waves-effect waves-light"><img data-original="http://i.imgur.com/TGRZGPHh.jpg" src="http://i.imgur.com/TGRZGPHs.jpg" alt=""></li>
             <li class= "waves-effect waves-light"><img data-original="http://i.imgur.com/tjLI6sZh.jpg" src="http://i.imgur.com/tjLI6sZs.jpg" alt=""></li>
@@ -52,6 +54,9 @@
             <li class= "waves-effect waves-light"><img data-original="http://i.imgur.com/XuTHt19h.jpg" src="http://i.imgur.com/XuTHt19s.jpg" alt=""></li>
             <li class= "waves-effect waves-light"><img data-original="http://i.imgur.com/4jiJAmih.jpg" src="http://i.imgur.com/4jiJAmis.jpg" alt=""></li>
             <li class= "waves-effect waves-light"><img data-original="http://i.imgur.com/L1eIZwVh.jpg" src="http://i.imgur.com/L1eIZwVs.jpg" alt=""></li>
+
+            
+            
 
         </ul>
     </div>
@@ -63,34 +68,34 @@
     <h5>Download HD Wallpapers</h5>
     <br>
 
-    <div class="text-center col-xs-12 col-sm-6 col-md-3 col-lg-3 wow fadeInUp">
-        <div class="  waves-effect waves-orange" >
-            <img class="thumbnail" src="http://i.imgur.com/KOLP23zs.jpg" alt="">
+        <div class="text-center col-xs-12 col-sm-6 col-md-3 col-lg-3 wow fadeInUp">
+            <div class="  waves-effect waves-orange" >
+                <img class="thumbnail" src="http://i.imgur.com/KOLP23zs.jpg" alt="">
+            </div>
+            <br>
+            <a class="btn btn-success waves-effect waves-light" ng-click="download('http://i.imgur.com/KOLP23z.jpg')">Download</a>
         </div>
-        <br>
-        <a class="btn btn-success waves-effect waves-light" ng-click="download('http://i.imgur.com/KOLP23z.jpg')">Download</a>
-    </div>
-    <div class="text-center col-xs-12 col-sm-6 col-md-3 col-lg-3 wow fadeInUp">
-        <div class="  waves-effect waves-orange" >
-            <img class="thumbnail" src="http://i.imgur.com/fjjkhOks.jpg" alt="">
+ <div class="text-center col-xs-12 col-sm-6 col-md-3 col-lg-3 wow fadeInUp">
+            <div class="  waves-effect waves-orange" >
+                <img class="thumbnail" src="http://i.imgur.com/fjjkhOks.jpg" alt="">
+            </div>
+            <br>
+            <a class="btn btn-success waves-effect waves-light" ng-click="download('http://i.imgur.com/fjjkhOk.jpg')">Download</a>
         </div>
-        <br>
-        <a class="btn btn-success waves-effect waves-light" ng-click="download('http://i.imgur.com/fjjkhOk.jpg')">Download</a>
-    </div>
-    <div class="text-center col-xs-12 col-sm-6 col-md-3 col-lg-3 wow fadeInUp">
-        <div class="  waves-effect waves-orange" >
-            <img class="thumbnail" src="http://i.imgur.com/YSIjuMps.jpg" alt="">
+ <div class="text-center col-xs-12 col-sm-6 col-md-3 col-lg-3 wow fadeInUp">
+            <div class="  waves-effect waves-orange" >
+                <img class="thumbnail" src="http://i.imgur.com/YSIjuMps.jpg" alt="">
+            </div>
+            <br>
+            <a class="btn btn-success waves-effect waves-light" ng-click="download('http://i.imgur.com/YSIjuMp.jpg')">Download</a>
         </div>
-        <br>
-        <a class="btn btn-success waves-effect waves-light" ng-click="download('http://i.imgur.com/YSIjuMp.jpg')">Download</a>
-    </div>
-    <div class="text-center col-xs-12 col-sm-6 col-md-3 col-lg-3 wow fadeInUp">
-        <div class="  waves-effect waves-orange" >
-            <img class="thumbnail" src="http://i.imgur.com/nRyHRd3s.jpg" alt="">
+ <div class="text-center col-xs-12 col-sm-6 col-md-3 col-lg-3 wow fadeInUp">
+            <div class="  waves-effect waves-orange" >
+                <img class="thumbnail" src="http://i.imgur.com/nRyHRd3s.jpg" alt="">
+            </div>
+            <br>
+            <a class="btn btn-success waves-effect waves-light" ng-click="download('http://i.imgur.com/nRyHRd3.jpg')">Download</a>
         </div>
-        <br>
-        <a class="btn btn-success waves-effect waves-light" ng-click="download('http://i.imgur.com/nRyHRd3.jpg')">Download</a>
-    </div>
     <br><br><br><br>
 
 
