--- a/src/gallery/views/gallery.html
+++ b/src/gallery/views/gallery.html
@@ -68,34 +68,46 @@
     <h5>Download HD Wallpapers</h5>
     <br>
 
-        <div class="text-center col-xs-12 col-sm-6 col-md-3 col-lg-3 wow fadeInUp">
+    <div class="row">
+        <div class="hidden-sm hiddem-xs  col-md-1 col-lg-1"></div>
+        <div class="text-center col-xs-12 col-sm-6 col-md-2 col-lg-2 wow fadeInUp">
             <div class="  waves-effect waves-orange" >
                 <img class="thumbnail" src="http://i.imgur.com/KOLP23zs.jpg" alt="">
             </div>
             <br>
             <a class="btn btn-success waves-effect waves-light" ng-click="download('http://i.imgur.com/KOLP23z.jpg')">Download</a>
         </div>
- <div class="text-center col-xs-12 col-sm-6 col-md-3 col-lg-3 wow fadeInUp">
+        <div class="text-center col-xs-12 col-sm-6 col-md-2 col-lg-2 wow fadeInUp">
             <div class="  waves-effect waves-orange" >
                 <img class="thumbnail" src="http://i.imgur.com/fjjkhOks.jpg" alt="">
             </div>
             <br>
             <a class="btn btn-success waves-effect waves-light" ng-click="download('http://i.imgur.com/fjjkhOk.jpg')">Download</a>
         </div>
- <div class="text-center col-xs-12 col-sm-6 col-md-3 col-lg-3 wow fadeInUp">
+        <div class="text-center col-xs-12 col-sm-6 col-md-2 col-lg-2 wow fadeInUp">
             <div class="  waves-effect waves-orange" >
                 <img class="thumbnail" src="http://i.imgur.com/YSIjuMps.jpg" alt="">
             </div>
             <br>
             <a class="btn btn-success waves-effect waves-light" ng-click="download('http://i.imgur.com/YSIjuMp.jpg')">Download</a>
         </div>
- <div class="text-center col-xs-12 col-sm-6 col-md-3 col-lg-3 wow fadeInUp">
+        <div class="text-center col-xs-12 col-sm-6 col-md-2 col-lg-2 wow fadeInUp">
             <div class="  waves-effect waves-orange" >
                 <img class="thumbnail" src="http://i.imgur.com/nRyHRd3s.jpg" alt="">
             </div>
             <br>
             <a class="btn btn-success waves-effect waves-light" ng-click="download('http://i.imgur.com/nRyHRd3.jpg')">Download</a>
         </div>
+        <div class="text-center col-xs-12 col-sm-12 col-md-2 col-lg-2 wow fadeInUp">
+            <div class="waves-effect waves-orange" >
+                <img class="thumbnail" src="http://i.imgur.com/ehO22Cgs.jpg" alt="">
+            </div>
+            <br>
+            <a class="btn btn-success waves-effect waves-light" ng-click="download('http://i.imgur.com/ehO22Cgh.jpg')">Download</a>
+        </div>
+    </div>
+
+
     <br><br><br><br>
 
 
