--- a/src/gallery/views/gallery.html
+++ b/src/gallery/views/gallery.html
@@ -26,7 +26,7 @@
 <br>
 <div class="container text-center">
     <div class="container">
-        <h3>Gallery</h3>
+        <h3 class="maketextgold">Gallery</h3>
         <ul class="wow slideInUp docs-pictures clearfix">
 
             <li class= "waves-effect waves-light"><img data-original="http://i.imgur.com/NBdC18eh.jpg" src="http://i.imgur.com/NBdC18es.jpg" alt="Website Inauguration"></li>
