--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,23 @@
   color: #926318;
 }
 
+@media (min-width: 768px) {
+  .modal-dialog {
+    width: 600px;
+    margin: 30px auto;
+  }
+}
+@media (min-width: 992px) {
+  .modal-lg {
+    width: 900px;
+  }
+}
+@media (min-width: 768px) {
+  .modal-xl {
+    width: 90%;
+    max-width: 1200px;
+  }
+}
 .app-title {
   font-family: "Lusitana", serif;
   font-weight: bolder;
@@ -254,27 +271,27 @@ html, body {
 }
 
 .rr-margin-left-20, .item1:hover ~ #floatingline {
-  margin-left: 20% !important;
+  margin-left: 24% !important;
 }
 
 .rr-margin-left-30, .item2:hover ~ #floatingline {
-  margin-left: 30% !important;
+  margin-left: 35% !important;
 }
 
 .rr-margin-left-40, .item3:hover ~ #floatingline {
-  margin-left: 40% !important;
+  margin-left: 45% !important;
 }
 
 .rr-margin-left-50, .item4:hover ~ #floatingline {
-  margin-left: 50% !important;
+  margin-left: 55% !important;
 }
 
 .rr-margin-left-60, .item5:hover ~ #floatingline {
-  margin-left: 60% !important;
+  margin-left: 66% !important;
 }
 
-.rr-margin-left-70, .item6:hover ~ #floatingline {
-  margin-left: 70% !important;
+.rr-margin-left-70 {
+  margin-left: 77% !important;
 }
 
 .goldline {
@@ -368,4 +385,22 @@ html, body {
 .transparent-back-white {
   background-color: white;
   opacity: 0.8;
+}
+
+@media (min-width: 768px) {
+  .modal-dialog {
+    width: 600px;
+    margin: 30px auto;
+  }
+}
+@media (min-width: 992px) {
+  .modal-lg {
+    width: 900px;
+  }
+}
+@media (min-width: 768px) {
+  .modal-xl {
+    width: 90%;
+    max-width: 1200px;
+  }
 }
