--- a/src/home/views/home.html
+++ b/src/home/views/home.html
@@ -39,9 +39,10 @@
 
         min-height: 600px;
     }
-    #ulsavamDiv h5,#ulsavamDiv h4{
+    #ulsavamDiv h5,#ulsavamDiv h4,#ulsavamDiv span{
         font-weight: bold;
         color:white;
+        word-wrap: break-word;
     }
     @media (max-width: 768px) {
         #deviDiv{
@@ -53,7 +54,7 @@
             background-image: url('http://i.imgur.com/Qd3jfda.jpg');
             min-height: 500px;
             background-repeat: no-repeat;
-            background-attachment: fixed;
+            background-attachment: inherit;
             background-position: center;
         }
     }
@@ -71,8 +72,9 @@
             <div class="container text-center">
                 <h5>കൊല്ലം കടപ്പാക്കട ശ്രീരാജരാജേശ്വരിദേവീക്ഷേത്രത്തിൽ</h5>
                 <h4>ശ്രീ മഹാ തിരുനാൾ മഹോത്സവം</h4>
-                <br><br><br><br><br><br><br><br>
-                <button type="button" class="btn btn-link ulsavamBtn" data-target="#ulsavamModal" data-toggle="modal" style="color: white;"><span style="font-weight:bold">Read More</span></button>
+                <br><br><br><br><br><br>
+                <button type="button" class="btn btn-link ulsavamBtn" data-target="#ulsavamModal" data-toggle="modal" style="color: white;background-color: darkgoldenrod;"><span style="font-weight:bold">Read More</span></button>
+                <h5>April 19 - April 29, 2017</h5>
                 <br><br><br>
                 <span style="font-size: large;font-weight: bold;">സൂര്യമണ്ഡലാകൃതിയിലുള്ള നവഗ്രഹ പ്രതിഷ്ഠാ കർമ്മം</span>
             </div>
