--- a/src/home/views/home.html
+++ b/src/home/views/home.html
@@ -39,6 +39,11 @@
 
         min-height: 600px;
     }
+    #youtube {
+        background-image: url(images/ulsavam/5.jpg);
+
+        min-height: 600px;
+    }
     #ulsavamDiv h5,#ulsavamDiv h4{
         font-weight: bold;
         color:white;
@@ -74,7 +79,6 @@
                 <br><br><br><br><br><br><br><br>
                 <button type="button" class="btn btn-link ulsavamBtn" data-target="#ulsavamModal" data-toggle="modal" style="color: white;"><span style="font-weight:bold">Read More</span></button>
                 <br><br><br>
-                <span style="font-size: large;font-weight: bold;">സൂര്യമണ്ഡലാകൃതിയിലുള്ള നവഗ്രഹ പ്രതിഷ്ഠാ കർമ്മം</span>
             </div>
         </section>
 
@@ -252,5 +256,18 @@
             </div>
         </div>
     </section> -->
+
+    <!-- Youtube videos div -->
+
+    <section class="parallax wow fadeInUp" id="youtube">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <div class="container text-center">
+            <h5>കൊല്ലം കടപ്പാക്കട ശ്രീരാജരാജേശ്വരിദേവീക്ഷേത്ര</h5>
+            <h4>ഭക്തിഗാനങ്ങൾ</h4>
+            <br>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLUWGv7uJ9yeL0W8zokkf7JGEX_pZ1vls1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <br><br><br>
+        </div>
+    </section>
 
 </div>
