--- a/css/mdb.css
+++ b/css/mdb.css
@@ -3094,7 +3094,6 @@ footer.page-footer .footer-content {
 footer.page-footer .footer-copyright {
   overflow: hidden;
   height: 50px;
-  line-height: 50px;
   color: rgba(255, 255, 255, 0.8);
 }
 
@@ -3664,7 +3663,8 @@ a {
 
 html {
   line-height: 1.5;
-  font-family: "Roboto",     sans-serif;
+  font-family: "Roboto",
+     sans-serif;
   font-weight: normal;
   color: rgba(0, 0, 0, 0.87);
 }
