--- a/css/mdb.css
+++ b/css/mdb.css
@@ -3094,6 +3094,7 @@ footer.page-footer .footer-content {
 footer.page-footer .footer-copyright {
   overflow: hidden;
   height: 50px;
+  line-height: 0;
   color: rgba(255, 255, 255, 0.8);
 }
 
